--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -10,6 +10,7 @@ on:
       - '!.github/**'
       - '.github/scripts/**'
       - '.github/workflows/build_push.yml'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}
@@ -115,7 +116,7 @@ jobs:
 
       - name: Upload APKs (chunk ${{ matrix.chunk }})
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4
-        if: "github.repository == 'Kohi-den/extensions-source'"
+        if: "github.repository == 'itsmechinmoy/extensions-source'"
         with:
           name: "individual-apks-${{ matrix.chunk }}"
           path: "**/*.apk"
@@ -128,7 +129,7 @@ jobs:
     name: Publish repo
     needs:
       - build_individual
-    if: "github.repository == 'Kohi-den/extensions-source'"
+    if: "github.repository == 'itsmechinmoy/extensions-source'"
     runs-on: ubuntu-latest
     steps:
       - name: Download APK artifacts
@@ -160,7 +161,7 @@ jobs:
       - name: Checkout repo branch
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
         with:
-          repository: Kohi-den/extensions
+          repository: itsmechinmoy/extensions
           token: ${{ secrets.BOT_PAT }}
           ref: main
           path: repo
